Pumputsähkönkäyuttäjinä ja rajapinnat mun osalta korjattu

--- a/tex/pumput_sahkon_kayttajina.tex
+++ b/tex/pumput_sahkon_kayttajina.tex
@@ -24,7 +24,7 @@ Lämpöpumppuja käytetään pääasiassa kiinteistöjen lämmitykseen ja viilen
     \label{fig:hptp}
   \end{figure}
 
-  Lämpöpumput käyttävät sähköenergiaa lämmön siirtämiseen viileämmästä lämpövarastosta lämpimämpään. Käytetystä sähköenergiasta valtaosa kuluu paineen tuottamiseen kompressorilla, mikä ylläpitää energiaa tuottavaa työkiertoa. Kompressorin lisäksi sähköä kuluu pienempiä määriä vaikkapa lämpöpumpun ohjaukseen, lämmitysjärjestelmän kiertovesipumpun käyttämiseen tai puhaltimen käyttämiseen. Mikäli lämpöpumpun teho on mitoitettu pienemmäksi kuin suurin vaadittu lämmitysteho\footnote{osatehomitoitus}, voidaan tehojen erotus tuottaa tarvittaessa lämpöpumpun yhteyteen asennettavilla sähkövastuksilla. Tällainen ratkaisu lisää huomattavasti järjestelmän sähkönkulutusta suurimman lämmitystarpeen aikana, jolloin sähköä käytetään muutenkin enemmän. Järjestelmän käyttäminen viilentämiseen taas lisää energian kulutusta, silloin kun sähkön käyttö on muuten todennäköisesti vähäisempää.
+  Lämpöpumput käyttävät sähköenergiaa lämmön siirtämiseen viileämmästä lämpövarastosta lämpimämpään. Käytetystä sähköenergiasta valtaosa kuluu paineen tuottamiseen kompressorilla, mikä ylläpitää energiaa tuottavaa työkiertoa. Kompressorin lisäksi sähköä kuluu pienempiä määriä vaikkapa lämpöpumpun ohjaukseen, lämmitysjärjestelmän kiertovesipumpun käyttämiseen tai puhaltimen käyttämiseen. Mikäli lämpöpumpun teho on mitoitettu pienemmäksi kuin suurin vaadittu lämmitysteho\footnote{osatehomitoitus}, voidaan tehojen erotus tuottaa tarvittaessa muilla keinoilla, esimerkiksi lämminvesivaraajan yhteyteen asennettavilla sähkövastuksilla jos kyseessä on ilma-vesilämpöpumppu. Tällainen ratkaisu lisää huomattavasti järjestelmän sähkönkulutusta suurimman lämmitystarpeen aikana, jolloin sähköä käytetään muutenkin enemmän. Järjestelmän käyttäminen viilentämiseen taas lisää energian kulutusta, silloin kun sähkön käyttö on muuten todennäköisesti vähäisempää.
 
   Lämpöpumpuissa kompressorin pyörittämiseen käytetään sähkömoottoria. Vanhemmissa lämpöpumpuissa moottori on useimmiten verkkojännitteeseen kytketty oikosulkumoottori, joka voidaan tarvittaessa varustaa käynnistyksen ohjauksella eli pehmokäynnistimellä. Nykyaikaisemmassa ratkaisuissa oikosulkumoottoria käytetään taajuusmuuttajan avulla.
 
@@ -33,11 +33,11 @@ Lämpöpumppuja käytetään pääasiassa kiinteistöjen lämmitykseen ja viilen
 
   Tärkeimmät kompressorin käyntijaksojen pituuteen vaikuttavat tekijät ovat lämmitettävän kohteen haluttu lämpötila ja lämpöenergian tarve, lämmönlähteen lämpötila ja kompressorin teho. Kotitalousköytössä kompressoreiden tehot ovat yleensä kilowattiluokkaa.
 
-  Mikäli oikosulkumoottorin käynnistysvirtaa ei mitenkään rajoiteta, on se tyypillisesti 6 -- 8 kertainen moottorin nimellisvirtaan nähden. Täten myös moottorin sähköverkosta käynnistyessään ottama teho on suuri. \parencite{pehmokaynnistinopas} Käynnistyksen jälkeen moottorin ottama virta ja teho laskevat kompressorin ottotehon määräämään arvoon.
+  Mikäli oikosulkumoottorin käynnistysvirtaa ei mitenkään rajoiteta, on se tyypillisesti 6 -- 8 kertainen moottorin nimellisvirtaan nähden. Täten myös moottorin sähköverkosta ottama käynnistysvirta on suuri. \parencite{pehmokaynnistinopas} Käynnistyksen jälkeen moottorin ottama virta laskee kompressorin ottaman tehon ja moottorin mitoituksen määräämään arvoon.
 
   Oikosulkumoottorien suuret käynnistysvirrat näkyvät tehopiikkeinä myös sähköverkon puolella. Mikäli samassa muuntopiirissä on useampia lämpöpumppuja tai alhainen jännitejäykkyys, saattavat pumput aiheuttaa jännitetason vaihteluita. Alhaisen jännitejäykkyyden omaavissa verkoissa jo lämpöpumppujen normaalit käynnistykset saattavat aiheuttaa jännitetasonvaihteluita, jotka ilmenevät esimerkiksi välkyntänä \parencite{SFSEN50160}. Sähkökatkojen jälkeen kytkettäessä jännitettä takaisin, useat lämpöpumput saattavat käynnistyä samaan aikaan lämmittämään viilentyneitä lämmityskohteitaan. Tämä saattaa aiheuttaa lyhytaikaisen jännitteen aleneman. Mikäli jännitteenaleneman jälkeinen jäännösjännite on alle \SI{90}{\percent} järjestelmän nimellisjännitteestä, kutsutaan sitä jännitekuopaksi \parencite{SFSEN50160}.
 
-  Oikosulkumoottoreiden käämityksistä johtuen ne ovat induktiivista kuormaa ja täten kuluttavat loistehoa. Mikäli moottoreiden kuluttamaa loistehoa ei kompensoida tuottamalla sitä paikallisesti, näyttäytyy lämpöpumppu sähköverkkoon induktiivisena kuormana. Induktiivisen kuorman kuluttama loisteho lisää häviöitä sähköverkossa ja loistehon kompensoinnin tarvetta verkkotasolla. \parencite{pakonen} Kotitalouskäytössä olevissa lämpöpumpuissa ei esiinny erillistä loistehon kompensointia \parencite{Manner}, mikä olisi vähintään osittainen ratkaisu edelliseen ongelmaan.
+  Oikosulkumoottoreiden käämityksistä johtuen ne ovat induktiivista kuormaa ja täten kuluttavat loistehoa. Mikäli moottoreiden kuluttamaa loistehoa ei kompensoida tuottamalla sitä paikallisesti, näyttäytyy lämpöpumppu sähköverkkoon induktiivisena kuormana. Induktiivisen kuorman kuluttama loisteho lisää häviöitä sähköverkossa ja loistehon kompensoinnin tarvetta verkkotasolla. \parencite{pakonen} Kotitalouskäytössä olevissa lämpöpumpuissa ei esiinny erillistä loistehon kompensointia \parencite{Manner}. Sähköverkkoyhtiöiden maakaapeloidessa verkkojaan, on verkon itsensä tuottama loisteho kuitenkin kasvanut merkittävästi, eikä induktiivinen kuorma tälläisessä verkossa ole välttämättä huono asia.
 
 
 \section{Oikosulkumoottori pehmokäynnistimellä}
@@ -48,7 +48,7 @@ Lämpöpumppuja käytetään pääasiassa kiinteistöjen lämmitykseen ja viilen
 \section{Taajuusmuuttajakäytöt}
   Nykyaikainen ratkaisu lämpöpumppujen kompressorien käyttämiseen on taajuusmuuttaja. Taajuusmuuttaja koostuu tasasuuntaajasta ja ohjatusta vaihtosuuntaajasta, jolla saadaan tuotettua halutun suuruista ja taajuista vaihtojännitettä. Käynnistettäessä kompressoria aloitetaan moottorin syöttäminen matalataajuisella vaihtojännitteellä. Moottorin käyntinopeuden noustessa kohti haluttua arvoa, nostetaan samalla jännitteen taajuutta niin, että verkosta otettu teho pysyy suurin piirtein vakiona pyörimisnopeudesta riippumatta.
 
-  Taajuusmuuttajan käytöllä saavutetaan useita hyötyjä. Käynnistysvirtapiikkien poistamisen lisäksi taajuusmuuttajalla voidaan myöskin säädellä kompressorin tuottamaa tehoa. Tehon säätäminen mahdollistaa pidemmät käyntijaksot ja tasaisemman tehonkulutuksen, mutta ei kuitenkaan vähennä lämpöpumpusta saatavaa maksimitehoa. Pienempien energiamäärien tuottaminen toteutetaan pienentämällä kompressorin käyntinopeutta, jolloin lämpöpumppua ei tarvitse käyttää useissa lyhyemmissä käyntijaksoissa.
+  Taajuusmuuttajan käytöllä saavutetaan useita hyötyjä. Käynnistysvirtapiikkien poistamisen lisäksi taajuusmuuttajalla voidaan myös valita kompressorin tuottama teho parhaalla mahdolisella tavalla. Tehon säätäminen mahdollistaa pidemmät käyntijaksot ja tasaisemman tehonkulutuksen, mutta ei kuitenkaan vähennä lämpöpumpusta saatavaa maksimitehoa. Pienempien energiamäärien tuottaminen toteutetaan pienentämällä kompressorin käyntinopeutta, jolloin lämpöpumppua ei tarvitse käyttää useissa lyhyemmissä käyntijaksoissa.
 
   Verkon näkökulmasta taajuusmuuttaja näyttäytyy eri tavoilla riippuen siitä, miten siinä on toteutettu vaihtovirran tasasuuntaus. Perinteisissä ja halvemmissa taajuusmuuttajissa tasasuuntaus on toteutettu diodisillalla. Diodisilta aiheuttaa sisääntulevan virran säröytymistä ja sitä kautta myöskin jännitehäiriöitä verkkoon. Myöskään lämpöpumpun tehokertoimen säätäminen ei onnistu. Diodisiltaa parempi ratkaisu on verkkovaihtosuuntaaja, jonka ottama virta voidaan säätää lähes sinimuotoiseksi, jolloin virtasärön syntyminen voidaan ehkäistä. Verkkovaihtosuuntaajan tehokerrointa voidaan myöskin säätää, jolloin sitä voidaan käyttää loistehotasapainon ylläpitämiseen. Mikäli lämpöpumppua syöttävä taajuusmuuttaja on säädetty niin, että se näyttäytyy verkkoon lähes resistiivisenä kuormana se osaltaan vähentää verkon kuormitusta ja laskee jännitehäviöitä. Taajuusmuuttajan verkkoon aiheuttamat jännitehäiriöt riippuvat paljon taajuusmuuttajasta, sen laadusta ja koosta. \parencite{koskenjoki}
 
