--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -15,7 +15,7 @@
 
 \newglossaryentry{MBAP}{
   name={MBAP},
-  description={Modbus Application protocol}
+  description={Modbus Application Protocol}
 }
 
 \newglossaryentry{ASCII}{
