Viittaus releeseen pois kun eihän siellä EVUsperressä oikeasti ole releitä

--- a/tex/sidosryhmat.tex
+++ b/tex/sidosryhmat.tex
@@ -46,7 +46,7 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
 
   Ennestään sähkömarkkinoilla on ollut käytännössä kolme toimijaa: Energian myyjä, siirtäjä ja ostaja. Aggregaattori näistä kaikista (mahdollisesti) erillinen toimija, jonka tehtävänä on myydä sähkömarkkinoille joustoa. Aggregaattori voi ohjata esimerkiksi lämpöpumppupoolia ja käydä kauppaa sen mahdollistamalla kysyntäjoustolla.
 
-  Lämpöpumput ovat todennäköisesti käyttöpaikkansa suurimpia sähkönkäyttäjiä. Käyttäjän kannalta olisi edullista, mikäli lämpöpumpun käyttämä sähkö hinnoiteltaisiin muusta käytetystä sähköstä erillään. Saksalaisessa EVU-Sparre-järjestelmässä lämpöpumppu on sähköntoimittajan tai muun yrityksen ohjattavissa. Korvauksena kuormanohjauksesta kuluttaja saa hinnanalennusta lämpöpumpun käytetystä energiasta, joten lämpöpumpun käyttämä energia on mitattava erikseen. Myöskin aggregaattorina toimivan yrityksen suorittama ohjaus tapahtuu AMI-mittareiden kuormanohjausreleen kautta. \parencite{enwg, VDEARN4100}
+  Lämpöpumput ovat todennäköisesti käyttöpaikkansa suurimpia sähkönkäyttäjiä. Saksalaisessa EVU-Sparre-järjestelmässä lämpöpumppu on sähköverkonhaltijan tai muun yrityksen ohjattavissa, ja sen kuluttama energia mitataan erikseen. Korvauksena kuormanohjauksesta kuluttaja voi hyödyntää lämpöpumpputariffeja lämpöpumpun käyttämän energian hankkimiseen. Aggregaattorina toimivan yrityksen suorittama ohjaus tapahtuu AMI-mittareiden digitaalisen ohjausrajapinnan kautta. \parencite{enwg, VDEARN4100}
 
   Vastaavasti aurinkosähköinvertterin ohjaukseen releohjaus ei suoraan sovellu, sillä inverttereiden ohjaus tapahtuu usein monimutkaisemmalla kommunikaatiolla, kuin yksinkertaisella releellä. Sinällään tämä ei haittaa, sillä aurinkosähköjärjestelmän hyödyt etäohjauksen osalta ovat vähäiset; tavoitteena on kuitenkin saada tuotettua mahdollisimman paljon energiaa, ja tämän invertteri hoitaa automaattisesti.
 
